# minecraft.cpp

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  premake5.lua  release.sh
.claude/: settings.local.json
MinecraftClone/: .gitignore  MinecraftClone.vcxproj  MinecraftClone.vcxproj.filters
MinecraftClone/assets/shaders/: drawTerrain.glsl  globalInclude.glsl  tntInstancing.glsl
MinecraftClone/assets/shaders/compute/: activateTnt.glsl  breakBlock.glsl  clearExplosions.glsl  explodeTnts.glsl  generateBlocks.glsl  generateQuads.glsl  initTntData.glsl  placeBlock.glsl  propagateExplosions.glsl  selectBlock.glsl  updateTntTransforms.glsl
MinecraftClone/src/: MinecraftCloneApp.cpp
MinecraftClone/src/Layers/: GameConfig.h  GameLayer.cpp  GameLayer.h
MinecraftClone/src/Overlays/: DebugOverlay.cpp  DebugOverlay.h
VoxelEngine/: VoxelEngine.vcxproj  VoxelEngine.vcxproj.filters
VoxelEngine/src/: VoxelEngine.h  pch.h
VoxelEngine/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
VoxelEngine/src/VoxelEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Timestep.h  Utils.h  Window.h
VoxelEngine/src/VoxelEngine/Debug/: GpuProfiler.h  Instrumentor.h
VoxelEngine/src/VoxelEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
VoxelEngine/src/VoxelEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
VoxelEngine/src/VoxelEngine/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureSubImage2D.cpp  TextureSubImage2D.h  VertexArray.cpp  VertexArray.h
VoxelEngine/vendor-build/: GLFW.lua  ImGui.lua  raudio.lua  tracy.lua
cmake/: mingw-w64-toolchain.cmake
doc/: ROADMAP.md
